# maya-dem-bones

./: .gitignore  .gitmodules  3RDPARTYLICENSES.md  CMakeLists.txt  LICENSE  README.md  build.bat  dem-bones.mod  setup.cfg  setup.py  tool_configuration.json
example/: face.py
maya/: build.bat
maya/example/: face.ma
maya/scripts/: dem_bones.py
maya/src/: main.cpp  utils.h
modules/: FindEigen3.cmake  FindMaya.cmake  FindMayaPython.cmake
src/: main.cpp
src/dem_bones/: __init__.py
